Refonte du projet en JavaFX