@@ -1,12 +1,30 @@
 plugins {
     id 'java'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 group 'fr.ecareus'
-version '1.0-SNAPSHOT'
+version '1.0.0'
 
 repositories {
+    mavenCentral()
 }
 
 dependencies {
+    implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'
+    implementation 'org.kordamp.ikonli:ikonli-bootstrapicons-pack:12.3.1'
 }
+
+compileJava {
+    options.encoding = "UTF-8"
+}
+
+javafx {
+    version = "21"
+    modules = [ 'javafx.controls' ]
+}
+
+mainClassName = 'fr.ecareus.onlinedoc.Application'
+
+applicationDefaultJvmArgs = ["--module-path \"C:\\Program Files\\Java\\javafx-sdk-21\\bin\\ --add-modules javafx.controls"]
